--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Colmaracademy</title>
     <link rel="stylesheet" type="text/css" href="resources/CSS/reset.css">
     <link rel="stylesheet" type="text/css" href="resources/CSS/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Lato:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
 
@@ -45,7 +47,7 @@
         <div class="text">
           <h1>Learn Something <br> New Everyday</h1>
           <h2>lorem ipsum dolor sit amet, <br> consectetur adipiscing elit</h2>
-          <button type="button" name="Start Here"><a href="#">Start Here</a></button>
+          <button type="button" name="Start Here"><i class="fa fa-university fa-3x"></i><h3> Start Here </h3><i class="fa fa-university fa-3x"></i></button>
 
         </div>
 
